implemented get single product functionality
